--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
 h1, p {
-  font-family: Lato;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+  font-size: 5em;
+}
 }
